--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
 
 project(Deliberation C CXX)
 
+set(DELIBERATION_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+
 # Configuration options
 
 # CMake configuration
