--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ find_package(GLM        REQUIRED)
 find_package(SDL2       REQUIRED)
 find_package(SDL2_ttf   REQUIRED)
 find_package(SDL2_image REQUIRED)
+find_package(json       REQUIRED)
 
 # Include projects
 add_subdirectory(Extern/googletest-1.8.0)
