--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ find_package(SDL2_ttf   REQUIRED)
 find_package(SDL2_image REQUIRED)
 find_package(json       REQUIRED)
 find_package(imgui      REQUIRED)
+find_package(variant    REQUIRED)
 
 # Include projects
 add_subdirectory(Extern/googletest-1.8.0)
