Initial windows port

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ project(Deliberation C CXX)
 set(DELIBERATION_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Build Type
+if(NOT CMAKE_BUILD_TYPE)
+	set(CMAKE_BUILD_TYPE "Debug")
+endif()
+
 if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
     set(DELIBERATION_BUILD_TYPE_DEBUG 1)
     set(DELIBERATION_BUILD_TYPE_RELEASE 0)
