--- a/Source/Deliberation/CMakeLists.txt
+++ b/Source/Deliberation/CMakeLists.txt
@@ -19,6 +19,7 @@ set(DELIBERATION_INCLUDE_DIRS
     ${JSON_INCLUDE_DIR}
     ${IMGUI_INCLUDE_DIRS}
     ${BOOST_INCLUDE_DIRS}
+    ${TINYOBJLOADER_INCLUDE_DIRS}
 
     CACHE INTERAL "All Deliberation include dirs" 
 )
@@ -440,6 +441,7 @@ set(libs
     ${OPENGL_gl_LIBRARY}
     ${IMGUI_LIBRARIES}
     ${GLBINDING_LIBRARIES}
+    ${TINYOBJLOADER_LIBRARIES}
     )
 
 set(DELIBERATION_LIBRARIES
