--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,17 +32,17 @@ set(CMAKE_CXX_STANDARD             14)
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Platforms/Platform.cmake)
 
 # dependencies
-find_package(Bandit     REQUIRED)
-find_package(OpenGL     REQUIRED)
-find_package(glbinding  REQUIRED)
-find_package(cxxopts    REQUIRED)
-find_package(GLM        REQUIRED)
-find_package(SDL2       REQUIRED)
-find_package(SDL2_ttf   REQUIRED)
-find_package(SDL2_image REQUIRED)
-find_package(json       REQUIRED)
-find_package(imgui      REQUIRED)
-find_package(boost      REQUIRED)
+find_package(OpenGL         REQUIRED)
+find_package(glbinding      REQUIRED)
+find_package(cxxopts        REQUIRED)
+find_package(GLM            REQUIRED)
+find_package(SDL2           REQUIRED)
+find_package(SDL2_ttf       REQUIRED)
+find_package(SDL2_image     REQUIRED)
+find_package(json           REQUIRED)
+find_package(imgui          REQUIRED)
+find_package(boost          REQUIRED)
+find_package(tinyobjloader  REQUIRED)
 
 # Include projects
 add_subdirectory(Extern/googletest-1.8.0)
