Proper texture filtering for bloom

--- a/Source/Deliberation/CMakeLists.txt
+++ b/Source/Deliberation/CMakeLists.txt
@@ -396,6 +396,7 @@ set(libs
     ${IMGUI_LIBRARIES}
     ${GLBINDING_LIBRARIES}
     ${TINYOBJLOADER_LIBRARIES}
+	-lnvToolsExt
 )
 
 set(DELIBERATION_LIBRARIES
