DebugGroundPlaneRenderer fixes et al

--- a/Source/Deliberation/CMakeLists.txt
+++ b/Source/Deliberation/CMakeLists.txt
@@ -262,6 +262,7 @@ set(sources
 	ECS/SystemBase.h
 	ECS/System.h
 	ECS/Systems/ApplicationSystem.h
+	ECS/Systems/PhysicsWorldSystem.cpp
 	ECS/Systems/PhysicsWorldSystem.h
 	ECS/Systems/SkyboxSystem.h
 	ECS/World.cpp
