MV cmake -> CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,14 +22,14 @@ endif()
 # Configuration options
 
 # CMake configuration
-set(CMAKE_MODULE_PATH 			   ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
+set(CMAKE_MODULE_PATH 			   ${CMAKE_CURRENT_SOURCE_DIR}/CMake ${CMAKE_MODULE_PATH})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_CXX_STANDARD             14)
 
 # Setup platform specifics (compile flags, etc., ...)
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Platforms/Platform.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/CMake/Platforms/Platform.cmake)
 
 # dependencies
 find_package(OpenGL         REQUIRED)
