Broken commit before I break things even more

--- a/Source/Deliberation/CMakeLists.txt
+++ b/Source/Deliberation/CMakeLists.txt
@@ -412,6 +412,7 @@ set(sources
 	Scene/Pipeline/Renderer.h
 	Scene/Pipeline/RenderManager.cpp
 	Scene/Pipeline/RenderManager.h
+	Scene/Pipeline/RenderNode.cpp
 	Scene/Pipeline/RenderNode.h
 	Scene/Pipeline/RenderPhase.h
 	Scene/Pipeline/RenderSystem.cpp
